# openclaw-mission-control

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASKS.md  mission-control-api-design.md  mission-control-frontend-architecture.md  mission-control-implementation-plan.md  mission-control-persistence-strategy.md  mission-control-security-stance.md  mission-control-tech-stack.md  openclaw-plugin-interfaces.md  projects.json  pyproject.toml
.github/workflows/: ci.yml  db-migrate.yaml  deploy.yml
docker/: docker-compose.dev.yml  docker-compose.yml
docs/: mission-control-api-design.md  mission-control-comms-bridge-spec.md  mission-control-deferred-features.md  mission-control-dogfooding-guide.md  mission-control-project-structure.md  mission-control-ui-style-guide.md
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: main.ts  style.css
frontend/src/api/: channels.ts  client.ts  organizations.ts  projects.ts  tasks.ts  users.ts
frontend/src/components/: CreateProjectDialog.vue  CreateTaskDialog.vue  EvidenceModal.vue  OrgSwitcher.vue  (+6 more)
frontend/test-results/: .last-run.json
frontend/tests/: org-store.test.ts  smoke-test.spec.ts
infrastructure/aws/: DEPLOYMENT.md  LIGHTSAIL_DEPLOYMENT.md  README.md  app.py  deploy-lightsail.sh  infrastructure_stack.py
poc/bridge/: RESULTS.md  bridge.py  mc_server.py  mock_gateway.py  requirements.txt  test_roundtrip.py
scripts/: ci-local.sh  db-reset.sh  dev-down.sh  dev-up.sh  init_db.sh  run-smoke-tests.sh  seed_dev_data.py
(+17 files in other folders)
