[project]
name = "openclaw-mission-control"
version = "0.1.0"
description = "Mission Control for OpenClaw agents and human teams"
authors = [{ name = "Johan Prinsloo", email = "johan.a.prinsloo@gmail.com" }]
dependencies = []
requires-python = ">=3.12"

[tool.uv]
workspace = { members = ["packages/*"] }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
