[project]
name = "openclaw-mission-control"
version = "0.1.0"
description = "Mission Control for OpenClaw agents and human teams"
authors = [{ name = "Johan Prinsloo", email = "johan.a.prinsloo@gmail.com" }]
dependencies = [
    "bcrypt==4.0.1",
]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
]

[tool.uv]
workspace = { members = ["packages/*"] }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["packages/server/tests", "packages/bridge/tests"]
# Ignore type errors in app/bridge code until annotations are added (optional: remove and fix types)
[[tool.mypy.overrides]]
module = ["app.*", "mc_bridge.*"]
ignore_errors = true
